microservices/tracing/zipkin-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zipkin-ingress
spec:
  rules:
  - host: zipkin.geckzone.ru
    http:
      paths:
      - path: "/"
        backend:
          serviceName: zipkin
          servicePort: 9411
